k8s/ace-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ace-backend
  name: ace-backend
  namespace: kafka-hq
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ace-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ace-backend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: registry.wittyshizard.dev/kafka-hq/ace-backend:latest
        imagePullPolicy: Always
        name: ace-backend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ace-backend
  namespace: kafka-hq
  labels:
    app: ace-backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ace-backend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ace-backend-ingress
  namespace: kafka-hq
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ace-web.wittyshizard.dev"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - ace-backend.wittyshizard.dev
      secretName: ace-backend-tls
  rules:
    - host: ace-backend.wittyshizard.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ace-backend
                port:
                  number: 8080
